--- a/index.html
+++ b/index.html
@@ -136,6 +136,24 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sección de Contacto -->
+        <section class="contact-section" id="contacto">
+            <div class="container">
+                <h2 class="contact-title">CONTACTO</h2>
+                <p class="contact-subtitle">Síguenos en nuestras redes sociales</p>
+                <div class="contact-links">
+                    <a href="https://api.whatsapp.com/message/SNTHTDS7M45AC1?autoload=1&app_absent=0" target="_blank" class="contact-link contact-whatsapp" aria-label="Contactar por WhatsApp">
+                        <img src="Image/whatsapp.svg" alt="WhatsApp" class="contact-icon" loading="lazy">
+                        <span>WhatsApp</span>
+                    </a>
+                    <a href="https://www.instagram.com/snowshoq_?igsh=MWx0dzIwcHphczhmeg%3D%3D&utm_source=qr" target="_blank" class="contact-link contact-instagram" aria-label="Seguir en Instagram">
+                        <img src="Image/instagram.svg" alt="Instagram" class="contact-icon" loading="lazy">
+                        <span>Instagram</span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
