--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">CATÁLOGO</h1>
+            <h1 class="logo"></h1>
             <nav>
                 <ul class="nav-menu">
                     <li><a href="#inicio" class="active">Inicio</a></li>
@@ -106,12 +106,12 @@
                         <h2 class="detail-name" id="detailName"></h2>
                         <div class="detail-price-wrapper">
                             <div class="detail-price" id="detailPrice"></div>
-                            <button class="detail-add-to-cart-btn" id="detailAddToCartBtn" aria-label="Agregar al carrito">
-                                <img src="Image/carrito.svg" alt="Carrito" class="detail-cart-icon">
-                                <span>Agregar al carrito</span>
-                            </button>
                         </div>
                         <div class="detail-description" id="detailDescription"></div>
+                        <button class="detail-add-to-cart-btn" id="detailAddToCartBtn" aria-label="Agregar al carrito">
+                            <img src="Image/carrito.svg" alt="Carrito" class="detail-cart-icon">
+                            <span>Añadir al carrito</span>
+                        </button>
                     </div>
                 </div>
             </div>
