--- a/pantalones.html
+++ b/pantalones.html
@@ -17,6 +17,10 @@
                     <li><a href="index.html#productos">Productos</a></li>
                     <li><a href="index.html#contacto">Contacto</a></li>
                 </ul>
+                <button class="cart-btn" id="cartBtn" aria-label="Ver carrito">
+                    <img src="Image/carrito.svg" alt="Carrito" class="cart-icon">
+                    <span class="cart-count" id="cartCount">0</span>
+                </button>
             </nav>
         </div>
     </header>
@@ -86,6 +90,10 @@
                         <h2 class="detail-name" id="detailName"></h2>
                         <div class="detail-price" id="detailPrice"></div>
                         <div class="detail-description" id="detailDescription"></div>
+                        <button class="detail-add-to-cart-btn" id="detailAddToCartBtn" aria-label="Agregar al carrito">
+                            <img src="Image/carrito.svg" alt="Carrito" class="detail-cart-icon">
+                            <span>Añadir al carrito</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -108,6 +116,27 @@
             }
         });
     </script>
+
+    <!-- Modal del Carrito -->
+    <div class="cart-modal" id="cartModal">
+        <div class="cart-modal-overlay"></div>
+        <div class="cart-modal-content">
+            <div class="cart-modal-header">
+                <h2 class="cart-modal-title">CARRITO DE COMPRAS</h2>
+                <button class="cart-close-btn" id="closeCartBtn" aria-label="Cerrar carrito">&times;</button>
+            </div>
+            <div class="cart-items" id="cartItems">
+                <!-- Los items del carrito se cargarán dinámicamente -->
+            </div>
+            <div class="cart-footer">
+                <div class="cart-total">
+                    <span class="cart-total-label">Total:</span>
+                    <span class="cart-total-amount" id="cartTotal">$0</span>
+                </div>
+                <button class="cart-checkout-btn" id="checkoutBtn">CONSULTAR TALLES</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
