Nueva actualización Musculosa y mod

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="container">
                 <div class="filter-group">
                     <button class="filter-btn active" data-filter="todos">Todos</button>
-                    <button class="filter-btn" data-filter="camisetas">Camisetas</button>
-                    <button class="filter-btn" data-filter="pantalones">Pantalones</button>
+                    <a href="nuevos-ingresos.html" class="filter-btn">Camisetas</a>
+                    <a href="pantalones.html" class="filter-btn">Pantalones</a>
                 </div>
             </div>
         </section>
