--- a/pantalones.html
+++ b/pantalones.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">CATÁLOGO</a></h1>
+            <h1 class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">Snowy</a></h1>
             <nav>
                 <ul class="nav-menu">
                     <li><a href="index.html">Inicio</a></li>
@@ -40,14 +40,6 @@
             <div class="container">
                 <div class="controls-wrapper">
                     <div class="controls-left">
-                        <button class="filter-toggle-btn" id="filterToggle">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <line x1="4" y1="6" x2="20" y2="6"></line>
-                                <line x1="4" y1="12" x2="20" y2="12"></line>
-                                <line x1="4" y1="18" x2="20" y2="18"></line>
-                            </svg>
-                            Mostrar filtros
-                        </button>
                         <span class="products-count" id="productsCount">0 productos</span>
                     </div>
                     <div class="controls-right">
@@ -110,9 +102,22 @@
     <script>
         // Configurar categoría para esta página
         const CATEGORIA_PAGINA = 'pantalones';
+        
         document.addEventListener('DOMContentLoaded', () => {
+            // Renderizar catálogo inicial
             if (typeof renderizarCatalogoCompleto === 'function') {
                 renderizarCatalogoCompleto(CATEGORIA_PAGINA);
+            }
+            
+            // Inicializar ordenamiento
+            const sortSelect = document.getElementById('sortSelect');
+            if (sortSelect) {
+                sortSelect.addEventListener('change', (e) => {
+                    const productosFiltrados = productos.filter(producto => producto.categoria === CATEGORIA_PAGINA);
+                    if (typeof ordenarProductos === 'function') {
+                        ordenarProductos(e.target.value, productosFiltrados);
+                    }
+                });
             }
         });
     </script>
@@ -139,4 +144,3 @@
     </div>
 </body>
 </html>
-
